# CAV

can_msgs/: CMakeLists.txt  package.xml
msu_msgs/: CMakeLists.txt  package.xml
msu_msgs/msg/: BoschRadarEgoEcho.msg  BoschRadarObject.msg  BoschRadarObjectPacket.msg  BoschRadarStatus.msg  BoschRadarTarget.msg  BoschRadarTargetPacket.msg  BoschVehicleData.msg  CompetitionObject.msg  CompetitionObjectArray.msg  CompetitionObjectPacket.msg  ConnectedCorridor.msg  DelphiTrackPacket.msg  IntersectionData.msg  LongControlData.msg  LongControlRequest.msg  MPCParameters.msg  MobileyeObstaclePacket.msg  VehicleData.msg
